# accelbyte-ags-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  renovate.json
.github/workflows/: ci.yml  release.yml
demo/: demo-server.py  record.sh  reel.tape
docs/reference/: cli-command-catalogue.md  cli-reference.md  output-reference.md  testing-reference.md
scripts/: generate_cli_command_catalogue.py
src/: errors.rs  lib.rs  main.rs
src/catalogue/: bundled.rs  cache.rs  manifest.rs  memory_cache.rs  mod.rs  openapi.rs  parser.rs  repository.rs  skeleton.rs
src/frontend/: mod.rs  render.rs  templates.rs
src/invocation/: builder.rs  clap_helpers.rs  errors.rs  flags.rs  mod.rs  resolve.rs  router.rs
src/protocol/: catalogue.rs  config.rs  diagnostics.rs  error.rs  event.rs  mod.rs  output.rs  output_views.rs  request.rs  result.rs
src/runtime/: cleanup.rs  completions.rs  execution.rs  mod.rs
src/support/: file_system.rs  mod.rs  output_sink.rs  strings.rs  test_helpers.rs
tests/: architecture.rs  contract_input.rs  contract_output.rs  functional.rs  integration.rs  performance.rs  scope_version.rs  security.rs  snapshot.rs
tests/common/: cli_helpers.rs  env_guard.rs  error_helpers.rs  fixture_helpers.rs  mod.rs  wiremock_helpers.rs
tests/contract_input/: services.rs
tests/contract_output/: channels.rs  config.rs  describe.rs  doctor.rs  emit_order.rs  error_structure.rs  errors.rs  human_readable.rs  json_mode.rs  profile.rs
tests/functional/: completions_enum_permissive.rs  completions_full_tree.rs  doctor.rs  (+1 more)
(+174 files in other folders)
