[package]
name = "accelbyte-ags-cli"
version = "0.2.0"
edition = "2021"
description = "Unified CLI for AccelByte Gaming Services"
license = "MIT"
rust-version = "1.84"
repository = "https://github.com/AccelByte/accelbyte-ags-cli"
homepage = "https://accelbyte.io/gaming-services"
readme = "README.md"
keywords = ["accelbyte", "cli", "gaming"]
categories = ["command-line-utilities"]
publish = false

[lib]
name = "ags"
path = "src/lib.rs"

[[bin]]
name = "ags"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
dirs = "6"
flate2 = "1"
rpassword = "7"
base64 = "0.22"
percent-encoding = "2"
regex = "1"
sha2 = "0.10"
rand = "0.9"
url = "2"
zeroize = { version = "1", features = ["derive"] }
tempfile = "3"
fs4 = "0.8"
anstream = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json", "redactions", "yaml"] }
wiremock = "0.6"
tokio-test = "0.4"
serial_test = "3"
filetime = "0.2"
